--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -382,6 +382,15 @@
 
    &__map {
 
+      iframe {
+         width: 100%;
+         height: 300px;
+         border: 0;
+         max-width: 100%;
+         box-shadow: 0px 4px 10px rgba($accent, .5);
+         border-radius: 30px;
+      }
+
       img {
          max-width: 100%;
          box-shadow: 0px 4px 10px rgba($accent, .5);
